--- a/index.html
+++ b/index.html
@@ -18,24 +18,31 @@
     <header class="position-relative">
         <div class="container-xl">
             <div class="row">
-                <div class="col-lg-5 left-side py-2">
-                    <div class="logo pb-3"><img src="img/logo.png" alt=""></div>
-                    <nav>
-                        <ul class="d-flex flex-wrap m-0 pl-4">
-                            <li class="pr-4 pb-1"><a href="#" class="text-white position-relative">О компании</a></li>
-                            <li class="pr-4 pb-1"><a href="#" class="text-white position-relative">Услуги</a></li>
-                            <li class="pr-4 pb-1"><a href="#" class="text-white position-relative">Новости</a></li>
-                            <li class="pr-4 pb-1"><a href="#" class="text-white position-relative">Контакты</a></li>
-                        </ul>
+                <div class="col-lg-5 left-side py-2 order-lg-1 order-2">
+                    <nav class="navbar-expand-sm ml-auto ml-sm-0">
+                        <div class="logo pb-sm-3"><img src="img/logo.png" alt=""></div>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarUlivem" aria-controls="navbarUlivem" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarUlivem">
+                            <ul class="d-flex flex-wrap m-0 pl-4 navbar-nav">
+                                <li class="nav-item pr-4 pb-1"><a href="#" class="text-white position-relative">О компании</a></li>
+                                <li class="nav-item pr-4 pb-1"><a href="#" class="text-white position-relative">Услуги</a></li>
+                                <li class="nav-item pr-4 pb-1"><a href="#" class="text-white position-relative">Новости</a></li>
+                                <li class="nav-item pr-4 pb-1"><a href="#" class="text-white position-relative">Контакты</a></li>
+                            </ul>
+                        </div>
                     </nav>
                 </div>
-                <div class="col-lg-7 right-side d-flex align-items-end py-3 px-4">
-                    <div class="top-phone"><a href="tel:+79111771479" class="d-flex align-items-center"><img src="img/top-phone.png" alt="" class="mx-3"> 8 911 177 14 79</a></div>
-                    <div class="top-mail pl-5"><a href="mailto:info@emelka.ru"><img src="img/top-mail.png" alt="" class="mx-3"> info@emelka.ru</div>
+                <div class="col-lg-7 right-side d-flex align-items-sm-end align-items-center py-sm-3 py-2 px-3 px-xl-4 order-lg-2 order-1">
+                    <div class="d-flex flex-wrap">
+                        <div class="top-phone pr-2"><a href="tel:+79111771479" class="d-flex align-items-center"><img src="img/top-phone.png" alt="" class="mx-2"> 8 911 177 14 79</a></div>
+                        <div class="top-mail pr-2 pl-sm-5"><a href="mailto:info@emelka.ru"><img src="img/top-mail.png" alt="" class="mx-2"> info@emelka.ru</div>
+                    </div>
                     <div class="top-soc ml-auto">
-                        <a href="#" class="px-2" target="_blank"><img src="img/top-vk.png" alt=""></a>
-                        <a href="#" class="px-2" target="_blank"><img src="img/top-fb.png" alt=""></a>
-                        <a href="#" class="px-2" target="_blank"><img src="img/top-inst.png" alt=""></a>
+                        <a href="#" class="px-1 px-sm-2" target="_blank"><img src="img/top-vk.png" alt=""></a>
+                        <a href="#" class="px-1 px-sm-2" target="_blank"><img src="img/top-fb.png" alt=""></a>
+                        <a href="#" class="px-1 px-sm-2" target="_blank"><img src="img/top-inst.png" alt=""></a>
                     </div>
                 </div>
             </div>
