--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+
     <header class="position-relative">
         <div class="container-xl">
             <div class="row">
@@ -34,8 +35,8 @@
                         </div>
                     </nav>
                 </div>
-                <div class="col-lg-7 right-side d-flex align-items-sm-end align-items-center py-sm-3 py-2 px-3 px-xl-4 order-lg-2 order-1">
-                    <div class="d-flex flex-wrap">
+                <div class="col-lg-7 right-side d-flex align-items-sm-end align-items-center py-sm-3 py-2 order-lg-2 order-1">
+                    <div class="d-flex flex-wrap flex-sm-nowrap">
                         <div class="top-phone pr-2"><a href="tel:+79111771479" class="d-flex align-items-center"><img src="img/top-phone.png" alt="" class="mx-2"> 8 911 177 14 79</a></div>
                         <div class="top-mail pr-2 pl-sm-5"><a href="mailto:info@emelka.ru"><img src="img/top-mail.png" alt="" class="mx-2"> info@emelka.ru</div>
                     </div>
@@ -48,6 +49,125 @@
             </div>
         </div>
     </header>
+
+    <div id="top-slider" class="carousel slide carousel-fade" data-ride="carousel" data-interval="false">
+        <div class="carousel-inner" style="border: 1px solid red">
+            <div class="carousel-item active">
+                <div class="d-flex">
+                    <div class="top-slider-text d-flex flex-column">
+                  
+                        <h2 class="text-uppercase">Услуги <b>печати</b></h2>
+                        <h3 class="text-uppercase pt-3">широкоформатная</h3>
+                        <ul class="top-slider-ul">
+                            <li>с интерьерным качеством 720dpi</li>
+                            <li>с фотографическим качеством 1440dpi</li>
+                            <li>540 dpi для уличного размещения</li>
+                        </ul>
+                        <h4 class="text-uppercase font-weight-bold pt-5">Любой тип материалов</h4>
+                        <ul class="top-slider-ul">
+                            <li>Пленка (самоклеющаяся NAR, Orajet, с черным клеем и т.д)</li>
+                            <li>Бумага (мелованная 130, 170 гр., холст, фотообои и т.д.)</li>
+                            <li>Баннер (440гр, 510, литой,  транслюцентный  и т.д.)</li>
+                            <li>Пластик (ПВХ 1. 2, 3, 5 мм)</li>
+                        </ul>
+               
+                        <a href="" class="text-uppercase font-weight-bold mt-auto mb-5 top-slider-detail">Подробнее</a>
+                        <ul class="top-slider-indicators d-flex p-0 mb-5">
+                            <li data-target="#top-slider" data-slide-to="0" class="active">01</li>
+                            <li data-target="#top-slider" data-slide-to="1">02</li>
+                            <li data-target="#top-slider" data-slide-to="2">03</li>
+                            <li data-target="#top-slider" data-slide-to="3">04</li>
+                        </ul>
+                    </div>
+                    <div class="top-slider-pic">
+                        <img src="img/top-slide-1.jpg" alt="" class="w-100">
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="d-flex">
+                    <div class="top-slider-text d-flex flex-column">
+
+                        <h2 class="text-uppercase">Услуги <b>печати</b></h2>
+                        <h3 class="text-uppercase pt-3">Полиграфия</h3>
+                        <ul class="top-slider-ul">
+                            <li>визитки</li>
+                            <li>листовки, флаеры, буклеты</li>
+                            <li>открытки, поздравления, конверты, дисконтные карты</li>
+                            <li>пакеты, календари</li>
+                        </ul>
+                        <h4 class="text-uppercase font-weight-bold pt-5">Любой тип печати</h4>
+                        <ul class="top-slider-ul">
+                            <li>Цифровая печать (тираж от 1шт)</li>
+                            <li>Офсетная печать (тираж от 500 шт)</li>
+                            <li>Печать с тиснением </li>
+                            <li>Фольгирование (серебро, золото)</li>
+                        </ul>
+
+                        <a href="" class="text-uppercase font-weight-bold mt-auto mb-5 top-slider-detail">Подробнее</a>
+                        <ul class="top-slider-indicators d-flex p-0 mb-5">
+                            <li data-target="#top-slider" data-slide-to="0">01</li>
+                            <li data-target="#top-slider" data-slide-to="1" class="active">02</li>
+                            <li data-target="#top-slider" data-slide-to="2">03</li>
+                            <li data-target="#top-slider" data-slide-to="3">04</li>
+                        </ul>
+                    </div>
+                    <div class="top-slider-pic">
+                        <img src="img/top-slide-2.jpg" alt="" class="w-100">
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="d-flex">
+                    <div class="top-slider-text d-flex flex-column">
+
+                        <h2 class="text-uppercase">Разработка <b>дизайн-макетов</b> <span>создание</span> <b>слоганов</b></h2>
+                        <ul class="top-slider-ul">
+                            <li>визитки</li>
+                            <li>листовки, флаеры, буклеты</li>
+                            <li>открытки, поздравления, конверты, дисконтные карты</li>
+                            <li>пакеты, календари</li>
+                            <li>сертификаты, дипломы, бэйджи</li>
+                            <li>сувенирная продукция (ручки, кружки, футболки, стикеры)</li>
+                            <li>оформление помещений</li>
+                            <li>таблички, указатели</li>
+                            <li>оформление выставочных стентов</li>
+                            <li>наружная реклама</li>
+                            <li>создание креативных слоганов и стихов</li>
+                        </ul>
+
+                        <a href="" class="text-uppercase font-weight-bold mt-auto mb-5 top-slider-detail">Подробнее</a>
+                        <ul class="top-slider-indicators d-flex p-0 mb-5">
+                            <li data-target="#top-slider" data-slide-to="0">01</li>
+                            <li data-target="#top-slider" data-slide-to="1">02</li>
+                            <li data-target="#top-slider" data-slide-to="2" class="active">03</li>
+                            <li data-target="#top-slider" data-slide-to="3">04</li>
+                        </ul>
+                    </div>
+                    <div class="top-slider-pic">
+                        <img src="img/top-slide-3.jpg" alt="" class="w-100">
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="d-flex">
+                    <div class="top-slider-text d-flex flex-column">
+
+                        <a href="" class="text-uppercase font-weight-bold mt-auto mb-5 top-slider-detail">Подробнее</a>
+                        <ul class="top-slider-indicators d-flex p-0 mb-5">
+                            <li data-target="#top-slider" data-slide-to="0">01</li>
+                            <li data-target="#top-slider" data-slide-to="1">02</li>
+                            <li data-target="#top-slider" data-slide-to="2">03</li>
+                            <li data-target="#top-slider" data-slide-to="3" class="active">04</li>
+                        </ul>
+                    </div>
+                    <div class="top-slider-pic">
+                        <img src="img/top-slide-4.jpg" alt="" class="w-100">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 	<script src="js/jquery-3.6.0.min.js"></script>
