--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             <li>Пластик (ПВХ 1. 2, 3, 5 мм)</li>
                         </ul>
                
-                        <a href="" class="text-uppercase font-weight-bold mt-auto mb-5 top-slider-detail">Подробнее</a>
+                        <a href="" class="text-uppercase font-weight-bold mt-auto mb-5 top-slider-detail">Подробнее <span></span></a>
                         <ul class="top-slider-indicators d-flex p-0 mb-5">
                             <li data-target="#top-slider" data-slide-to="0" class="active">01</li>
                             <li data-target="#top-slider" data-slide-to="1">02</li>
@@ -104,7 +104,7 @@
                             <li>Фольгирование (серебро, золото)</li>
                         </ul>
 
-                        <a href="" class="text-uppercase font-weight-bold mt-auto mb-5 top-slider-detail">Подробнее</a>
+                        <a href="" class="text-uppercase font-weight-bold mt-auto mb-5 top-slider-detail">Подробнее <span></span></a>
                         <ul class="top-slider-indicators d-flex p-0 mb-5">
                             <li data-target="#top-slider" data-slide-to="0">01</li>
                             <li data-target="#top-slider" data-slide-to="1" class="active">02</li>
@@ -136,7 +136,7 @@
                             <li>создание креативных слоганов и стихов</li>
                         </ul>
 
-                        <a href="" class="text-uppercase font-weight-bold mt-auto mb-5 top-slider-detail">Подробнее</a>
+                        <a href="" class="text-uppercase font-weight-bold mt-auto mb-5 top-slider-detail">Подробнее <span></span></a>
                         <ul class="top-slider-indicators d-flex p-0 mb-5">
                             <li data-target="#top-slider" data-slide-to="0">01</li>
                             <li data-target="#top-slider" data-slide-to="1">02</li>
@@ -153,7 +153,15 @@
                 <div class="d-flex">
                     <div class="top-slider-text d-flex flex-column">
 
-                        <a href="" class="text-uppercase font-weight-bold mt-auto mb-5 top-slider-detail">Подробнее</a>
+                        <h2 class="text-uppercase">Разработка дизайна <br><b>Landing Page</b></h2>
+                        <ul class="top-slider-ul">
+                            <li>короткий landing page</li>
+                            <li>landing page - каталог товаров с корзиной</li>
+                            <li>landing page - много блоков</li>
+                            <li>landing page - индивидуальный</li>
+                        </ul>
+
+                        <a href="" class="text-uppercase font-weight-bold mt-auto mb-5 top-slider-detail">Подробнее <span></span></a>
                         <ul class="top-slider-indicators d-flex p-0 mb-5">
                             <li data-target="#top-slider" data-slide-to="0">01</li>
                             <li data-target="#top-slider" data-slide-to="1">02</li>
@@ -168,6 +176,23 @@
             </div>
         </div>
     </div>
+
+    <section id="missia">
+        <div class="container-xl">
+            <h3 class="text-uppercase">О нас</h3>
+            <h2 class="text-uppercase pt-2 pb-4">Наша <b>миссия</b></h2>
+            <p>В современном цифровом мире, который мчится на бешеной скорости, погоняемый технологиями и инновациями, крайне сложно сделать осознанный выбор, а еще сложнее сделать этот выбор - верно. Ваши клиенты испытывают колоссальное информационное давление и, зачастую теряются под натиском агрессивных и жестких маркетинговых технологий. В итоге, испытывают лишь раздражение и злость.</p>
+            <p>Наша задача, прежде всего в том, чтобы дать  вам и вашему бизнесу возможность не затеряться на общем фоне информационного хаоса, ясно и точно определив симпатии клиента в вашу пользу. Будь то визитка или брошюра, каталог  или листовка, баннер или флаер, важно, чтобы это нравилось людям. Важно, чтобы информация была воспринята - верно. Важно, чтобы выбор был сделан в вашу пользу.</p>
+            <p class="font-weight-bold pt-2">Наш многолетний опыт в сфере дизайна и полиграфии позволяет нам тонко чувствовать, смело излагать и точно бить в цель.</p>
+            <p class="font-weight-bold pt-2">Мы давно и успешно объединяем наши знания и опыт с целями наших клиентов. В итоге - получаем результат.</p>
+            <p class="font-weight-bold pt-2">Вам нужен результат? Тогда нам по пути!</p>
+            <a href="" class="missia-detail text-center text-white text-uppercase d-block py-3 mt-5">Подробнее <span></span></a>
+        </div>
+    </section>
+
+    <section id="proekty">
+        
+    </section>
 
 
 	<script src="js/jquery-3.6.0.min.js"></script>
