--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </header>
 
     <div id="top-slider" class="carousel slide carousel-fade" data-ride="carousel" data-interval="false">
-        <div class="carousel-inner" style="border: 1px solid red">
+        <div class="carousel-inner">
             <div class="carousel-item active">
                 <div class="d-flex">
                     <div class="top-slider-text d-flex flex-column">
@@ -191,9 +191,126 @@
     </section>
 
     <section id="proekty">
-        
+        <div class="container-xl">
+            <h3 class="text-uppercase text-center text-white"><span class="position-relative">наши РЕАЛИЗОВАНЫЕ</span></h3>
+            <h2 class="text-uppercase text-center text-white font-weight-bold pt-2">дизайн-ПРОЕКТЫ</h2>
+            <div class="proekty-wrap d-flex flex-wrap justify-content-center justify-content-xl-between">
+                <div class="proekt-item pb-3">
+                    <img src="img/proekt-1.jpg" alt="" class="w-100">
+                    <h5 class="text-white text-center text-uppercase">Логотипы</h5>
+                </div>
+                <div class="proekt-item pb-3">
+                    <img src="img/proekt-2.jpg" alt="" class="w-100">
+                    <h5 class="text-white text-center text-uppercase">визитки, листовки, флаеры</h5>
+                </div>
+                <div class="proekt-item pb-3">
+                    <img src="img/proekt-3.jpg" alt="" class="w-100">
+                    <h5 class="text-white text-center text-uppercase">роллапы, баннеры</h5>
+                </div>
+                <div class="proekt-item pb-3">
+                    <img src="img/proekt-4.jpg" alt="" class="w-100">
+                    <h5 class="text-white text-center text-uppercase">Афиши</h5>
+                </div>
+                <div class="proekt-item pb-3">
+                    <img src="img/proekt-5.jpg" alt="" class="w-100">
+                    <h5 class="text-white text-center text-uppercase">лайтбоксы, билборды</h5>
+                </div>
+                <div class="proekt-item pb-3">
+                    <img src="img/proekt-6.jpg" alt="" class="w-100">
+                    <h5 class="text-white text-center text-uppercase">сувенирная продукция</h5>
+                </div>
+                <div class="proekt-item pb-3">
+                    <img src="img/proekt-7.jpg" alt="" class="w-100">
+                    <h5 class="text-white text-center text-uppercase">этикетки, упаковка</h5>
+                </div>
+                <div class="proekt-item pb-3">
+                    <img src="img/proekt-8.jpg" alt="" class="w-100">
+                    <h5 class="text-white text-center text-uppercase">3D дизайн</h5>
+                </div>
+                <div class="proekt-item pb-3">
+                    <img src="img/proekt-9.jpg" alt="" class="w-100">
+                    <h5 class="text-white text-center text-uppercase">сайты</h5>
+                </div>
+            </div>
+            <a href="" class="proekty-detail text-white text-uppercase d-block py-3 pl-5">больше проектов <span></span></a>
+        </div>
     </section>
 
+    <section id="uslugi">
+        <div class="container-xl">
+            <h3 class="text-uppercase text-center"><span class="position-relative">НАШи услуги</span></h3>
+            <h2 class="text-uppercase text-center py-2"><b>УНИВЕР&shy;САЛЬНЫЕ</b> печатные Решения</h2>
+            <p class="text-center pb-5">Печатаем абсолютно все: от открыток и визиток до широкоформатных баннеров и наклеек -<br> 
+                это то, в чем мы хороши!</p>
+            <div class="uslugi-wrap d-flex flex-wrap justify-content-center justify-content-xl-between">
+                <div class="uslugi-item mb-5 position-relative">
+                    <img src="img/uslugi-1.jpg" alt="" class="w-100">
+                    <a href="" class="text-white text-center text-uppercase py-3 position-absolute">фирменный стиль</a>
+                </div>
+                <div class="uslugi-item mb-5 position-relative">
+                    <img src="img/uslugi-2.jpg" alt="" class="w-100">
+                    <a href="" class="text-white text-center text-uppercase py-3 position-absolute">бизнес-материалы</a>
+                </div>
+                <div class="uslugi-item mb-5 position-relative">
+                    <img src="img/uslugi-3.jpg" alt="" class="w-100">
+                    <a href="" class="text-white text-center text-uppercase py-3 position-absolute">аФИШИ</a>
+                </div>
+                <div class="uslugi-item mb-5 position-relative">
+                    <img src="img/uslugi-4.jpg" alt="" class="w-100">
+                    <a href="" class="text-white text-center text-uppercase py-3 position-absolute">ПРОМО-Матералы</a>
+                </div>
+                <div class="uslugi-item mb-5 position-relative">
+                    <img src="img/uslugi-5.jpg" alt="" class="w-100">
+                    <a href="" class="text-white text-center text-uppercase py-3 position-absolute">БАННЕРЫ, РОЛЛАПЫ</a>
+                </div>
+                <div class="uslugi-item mb-5 position-relative">
+                    <img src="img/uslugi-6.jpg" alt="" class="w-100">
+                    <a href="" class="text-white text-center text-uppercase py-3 position-absolute">сайты</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="formaty" class="py-5">
+        <div class="container-xl">
+            <h3 class="text-uppercase text-center"><span class="position-relative">слоганы, стихи для вашего бизнеса</span></h3>
+            <h2 class="text-uppercase text-center py-2"><b>креативные</b> рекламные форматы</h2>
+
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="img/formaty-1.png" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/formaty-2.png" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/formaty-3.png" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/formaty-4.png" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/formaty-5.png" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/formaty-6.png" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/formaty-7.png" alt="">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+        </div>
+    </section>
 
 	<script src="js/jquery-3.6.0.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
