--- a/index.html
+++ b/index.html
@@ -18,10 +18,21 @@
 
     <header class="position-relative">
         <div class="container-xl">
-            <div class="row">
+            <div class="row pt-lg-4">
                 <div class="col-lg-5 left-side py-2 order-lg-1 order-2">
                     <nav class="navbar-expand-sm ml-auto ml-sm-0">
-                        <div class="logo pb-sm-3"><img src="img/logo.png" alt=""></div>
+                        <div class="top-logo pb-sm-3 position-relative">
+                            <img src="img/logo.png" alt="">
+                            <div class="bubble21 position-absolute d-none d-xl-block"></div>
+                            <div class="bubble16 position-absolute d-none d-xl-block"></div>
+                            <div class="bubble6-white-right position-absolute d-none d-xl-block"></div>
+                            <div class="bubble6-orange-right position-absolute d-none d-xl-block"></div>
+                            <div class="bubble12 position-absolute d-none d-xl-block"></div>
+                            <div class="bubble19 position-absolute d-none d-xl-block"></div>
+                            <div class="bubble15 position-absolute d-none d-xl-block"></div>
+                            <div class="bubble6-white-left position-absolute d-none d-xl-block"></div>
+                            <div class="bubble6-orange-left position-absolute d-none d-xl-block"></div>
+                        </div>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarUlivem" aria-controls="navbarUlivem" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
@@ -55,7 +66,6 @@
             <div class="carousel-item active">
                 <div class="d-flex">
                     <div class="top-slider-text d-flex flex-column">
-                  
                         <h2 class="text-uppercase">Услуги <b>печати</b></h2>
                         <h3 class="text-uppercase pt-3">широкоформатная</h3>
                         <ul class="top-slider-ul">
@@ -70,7 +80,6 @@
                             <li>Баннер (440гр, 510, литой,  транслюцентный  и т.д.)</li>
                             <li>Пластик (ПВХ 1. 2, 3, 5 мм)</li>
                         </ul>
-               
                         <a href="" class="text-uppercase font-weight-bold mt-auto mb-5 top-slider-detail">Подробнее <span></span></a>
                         <ul class="top-slider-indicators d-flex p-0 mb-5">
                             <li data-target="#top-slider" data-slide-to="0" class="active">01</li>
@@ -103,7 +112,6 @@
                             <li>Печать с тиснением </li>
                             <li>Фольгирование (серебро, золото)</li>
                         </ul>
-
                         <a href="" class="text-uppercase font-weight-bold mt-auto mb-5 top-slider-detail">Подробнее <span></span></a>
                         <ul class="top-slider-indicators d-flex p-0 mb-5">
                             <li data-target="#top-slider" data-slide-to="0">01</li>
@@ -120,7 +128,6 @@
             <div class="carousel-item">
                 <div class="d-flex">
                     <div class="top-slider-text d-flex flex-column">
-
                         <h2 class="text-uppercase">Разработка <b>дизайн-макетов</b> <span>создание</span> <b>слоганов</b></h2>
                         <ul class="top-slider-ul">
                             <li>визитки</li>
@@ -135,7 +142,6 @@
                             <li>наружная реклама</li>
                             <li>создание креативных слоганов и стихов</li>
                         </ul>
-
                         <a href="" class="text-uppercase font-weight-bold mt-auto mb-5 top-slider-detail">Подробнее <span></span></a>
                         <ul class="top-slider-indicators d-flex p-0 mb-5">
                             <li data-target="#top-slider" data-slide-to="0">01</li>
@@ -275,40 +281,108 @@
         <div class="container-xl">
             <h3 class="text-uppercase text-center"><span class="position-relative">слоганы, стихи для вашего бизнеса</span></h3>
             <h2 class="text-uppercase text-center py-2"><b>креативные</b> рекламные форматы</h2>
-
-            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div id="carouselFormaty" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="img/formaty-1.png" alt="">
+                    <div class="carousel-item position-relative active">
+                        <div class="position-absolute w-100 h-100 d-flex justify-content-center align-items-center">
+                            <img src="img/formaty-1.png" alt="">
+                        </div>
                     </div>
-                    <div class="carousel-item">
-                        <img src="img/formaty-2.png" alt="">
+                    <div class="carousel-item position-relative">
+                        <div class="position-absolute w-100 h-100 d-flex justify-content-center align-items-center">
+                            <img src="img/formaty-2.png" alt="">
+                        </div>
                     </div>
-                    <div class="carousel-item">
-                        <img src="img/formaty-3.png" alt="">
+                    <div class="carousel-item position-relative">
+                        <div class="position-absolute w-100 h-100 d-flex justify-content-center align-items-center">
+                            <img src="img/formaty-3.png" alt="">
+                        </div>
                     </div>
-                    <div class="carousel-item">
-                        <img src="img/formaty-4.png" alt="">
+                    <div class="carousel-item position-relative">
+                        <div class="position-absolute w-100 h-100 d-flex justify-content-center align-items-center">
+                            <img src="img/formaty-4.png" alt="">
+                        </div>
                     </div>
-                    <div class="carousel-item">
-                        <img src="img/formaty-5.png" alt="">
+                    <div class="carousel-item position-relative">
+                        <div class="position-absolute w-100 h-100 d-flex justify-content-center align-items-center">
+                            <img src="img/formaty-5.png" alt="">
+                        </div>
                     </div>
-                    <div class="carousel-item">
-                        <img src="img/formaty-6.png" alt="">
+                    <div class="carousel-item position-relative">
+                        <div class="position-absolute w-100 h-100 d-flex justify-content-center align-items-center">
+                            <img src="img/formaty-6.png" alt="">
+                        </div>
                     </div>
-                    <div class="carousel-item">
-                        <img src="img/formaty-7.png" alt="">
+                    <div class="carousel-item position-relative">
+                        <div class="position-absolute w-100 h-100 d-flex justify-content-center align-items-center">
+                            <img src="img/formaty-7.png" alt="">
+                        </div>
                     </div>
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Previous</span>
+                <a class="formaty-control-left position-absolute" href="#carouselFormaty" role="button" data-slide="prev">
+                    <img src="img/arr-left.png" alt="">
                 </a>
-                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Next</span>
+                <a class="formaty-control-right position-absolute" href="#carouselFormaty" role="button" data-slide="next">
+                    <img src="img/arr-right.png" alt="">
                 </a>
-              </div>
+            </div>
+            <a href="" class="text-uppercase font-weight-bold my-3 mx-auto py-3 text-white formaty-slider-detail d-block text-center position-relative">Заказать <span></span></a>
+        </div>
+    </section>
+
+    <section id="news" class="py-5">
+        <div class="container-xl">
+            <h3 class="text-uppercase text-center"><span class="position-relative">НОВОСТИ И СОБЫТИЯ</span></h3>
+            <h2 class="text-uppercase text-center text-white font-weight-bold pt-2 pb-5">Интересная Информация</h2>
+            <div class="row news-wrap my-3">
+                <div class="col-md-4 news-pic text-center pb-3"><img src="img/news-1.jpg" alt="" class="img-fluid"></div>
+                <div class="col-md-8 news-text">
+                    <h4 class="news-title text-white text-uppercase">Gucci выпускает первые кроссовки Virtual 25, которые можно носить только в дополненной реальности</h4>
+                    <p class="news-date">20.02.21</p>
+                    <p class="news-prew-text text-white">Креативный директор Gucci Алессандро Микеле разработал пару неоновых кроссовок, предназначенных только для цифровых технологий, которые люди могут примерить, используя дополненную реальность и «надевать» на фотографиях для социальных сетей.
+                        Gucci Virtual 25, названный в честь любимого числа Микеле, представляет собой гибрид с низким верхом и высоким верхом с флуоресцентным верхом зеленого цвета.</p>
+                    <a href="" class="text-uppercase font-weight-bold my-3 py-3 px-4 text-white news-detail d-block position-relative">Читать далее <span></span></a>
+                </div>
+            </div>
+            <div class="row news-wrap my-3">
+                <div class="col-md-4 news-pic text-center pb-3"><img src="img/news-2.jpg" alt="" class="img-fluid"></div>
+                <div class="col-md-8 news-text">
+                    <h4 class="news-title text-white text-uppercase">Компания Renault представила обновленный логотип</h4>
+                    <p class="news-date">19.02.21</p>
+                    <p class="news-prew-text text-white">Renault официально представил обновленный логотип бренда в 2021 году впервые с 1925 года.
+                        Новой эмблемой будут вскоре оснащать все машины концерна Renault. Впервые такой логотип увидеть можно было на концептуальной модели, называющейся 5 Prototype, она стала идеологическим преемником модели Renault 5 (R5) (этот автомобиль выпускался с 1972 по 1996 год).</p>
+                    <a href="" class="text-uppercase font-weight-bold my-3 py-3 px-4 text-white news-detail d-block position-relative">Читать далее <span></span></a>
+                </div>
+            </div>
+            <div class="row news-wrap my-3">
+                <div class="col-md-4 news-pic text-center pb-3"><img src="img/news-3.jpg" alt="" class="img-fluid"></div>
+                <div class="col-md-8 news-text">
+                    <h4 class="news-title text-white text-uppercase">Канадская компания СHOP Value делает мебель из палочек для еды</h4>
+                    <p class="news-date">18.02.21</p>
+                    <p class="news-prew-text text-white">ChopValue, стартап из Ванкувера, восстанавливает одноразовые палочки для еды, превращая их в мебель. С момента своего основания в 2016 году компания спасла миллионы столовых приборов от свалок. Целью компании было желание уберечь палочки от свалок, где они разлагаются и продлить срок их службы. Работая с ресторанами, Феликс создал мусорные баки и систему сбора палочек для еды, которыми пользовались их клиенты. Собранная древесина затем доставлялась на местные предприятия для переработки в ценные товары.</p>
+                    <a href="" class="text-uppercase font-weight-bold my-3 py-3 px-4 text-white news-detail d-block position-relative">Читать далее <span></span></a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="partners">
+        <div class="container-xl">
+            <h3 class="text-uppercase text-center pb-3"><span class="position-relative">наши партнеры</span></h3>
+            <div class="part-wrap d-flex flex-wrap justify-content-xl-between justify-content-center align-items-center py-4">
+                <img src="img/part-1.jpg" alt="">
+                <img src="img/part-2.jpg" alt="">
+                <img src="img/part-3.jpg" alt="">
+                <img src="img/part-4.jpg" alt="">
+                <img src="img/part-5.jpg" alt="">
+            </div>
+            <div class="part-wrap d-flex flex-wrap justify-content-xl-between justify-content-center align-items-center py-4">
+                <img src="img/part-6.jpg" alt="">
+                <img src="img/part-7.jpg" alt="">
+                <img src="img/part-8.jpg" alt="">
+                <img src="img/part-9.jpg" alt="">
+                <img src="img/part-10.jpg" alt="">
+            </div>
         </div>
     </section>
 
