--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	<meta property="og:image" content="">
 	<!--<link href="img/favicon.png" rel="shortcut icon" type="image/x-icon" />-->
 	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="css/slick.css" rel="stylesheet" type="text/css">
+    <link href="css/slick-theme.css" rel="stylesheet" type="text/css">
 	<link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -330,6 +332,105 @@
         </div>
     </section>
 
+    <section id="akcii">
+        <h3 class="text-uppercase text-center"><span class="position-relative">НАШИ АКЦИИ</span></h3>
+        <h2 class="text-uppercase text-center py-2"><b>ЛУЧШЕЕ Качество</b> и Самая Низкая цена</h2>
+        <div class="akc-slider mx-auto">
+            <div class="akc-wrap">
+                <div class="akc-item text-center position-relative mx-auto d-flex flex-column">
+                    <div class="akc-icon position-absolute d-flex align-items-center justify-content-center">
+                        <img src="img/akcia-1.png" alt="">
+                    </div>
+                    <div class="akc-name text-uppercase font-weight-bold">ПРОМО-МАТЕРИАЛЫ</div>
+                    <span class="akc-ot">от</span>
+                    <div class="akc-price font-weight-bold">45 &#8381;</div>
+                    <div class="akc-name text-uppercase font-weight-bold pb-3">Сумки из спанбонда</div>
+                    <p>НАНЕСЕНИЕ ЛОГОТИПА <br>в 1 цвет с двух сторон <br>(шелкография)</p>
+                    <p class="akc-min-tirazh mt-auto mb-0">Минимальный тираж: 50 шт.</p>
+                    <a href="" class="text-uppercase font-weight-bold my-3 mx-auto py-3 text-white akc-slider-detail d-block text-center position-absolute">Заказать <span></span></a>
+                </div>
+            </div>
+            <div class="akc-wrap">
+                <div class="akc-item text-center position-relative mx-auto d-flex flex-column">
+                    <div class="akc-icon position-absolute d-flex align-items-center justify-content-center">
+                        <img src="img/akcia-2.png" alt="">
+                    </div>
+                    <div class="akc-name text-uppercase font-weight-bold">Бизнес-МАТЕРИАЛЫ</div>
+                    <span class="akc-ot">от</span>
+                    <div class="akc-price font-weight-bold">30 &#8381;</div>
+                    <div class="akc-name text-uppercase font-weight-bold pb-3">Брошюры</div>
+                    <div class="akc-name text-uppercase font-weight-bold pb-3">Листовки</div>
+                    <div class="akc-name text-uppercase font-weight-bold pb-3">Каталоги</div>
+                    <div class="akc-name text-uppercase font-weight-bold pb-3">Открытки</div>
+                    <p class="akc-min-tirazh mt-auto mb-0">Минимальный тираж: 10 шт.</p>
+                    <a href="" class="text-uppercase font-weight-bold my-3 mx-auto py-3 text-white akc-slider-detail d-block text-center position-absolute">Заказать <span></span></a>
+                </div>
+            </div>
+            <div class="akc-wrap">
+                <div class="akc-item text-center position-relative mx-auto d-flex flex-column">
+                    <div class="akc-icon position-absolute d-flex align-items-center justify-content-center">
+                        <img src="img/akcia-3.png" alt="">
+                    </div>
+                    <div class="akc-name text-uppercase font-weight-bold">БАННЕРЫ и ПЛАКАТЫ</div>
+                    <span class="akc-ot">от</span>
+                    <div class="akc-price font-weight-bold">350 <span>м.кв</span> &#8381;</div>
+                    <div class="akc-name text-uppercase font-weight-bold pb-3">Бумажные афиши</div>
+                    <div class="akc-name text-uppercase font-weight-bold pb-3">Самоклейки</div>
+                    <div class="akc-name text-uppercase font-weight-bold pb-3">Баннеры</div>
+                    <div class="akc-name text-uppercase font-weight-bold pb-3">Роллапы</div>
+                    <p class="akc-min-tirazh mt-auto mb-0">Минимальный тираж: от 10 м.кв.</p>
+                    <a href="" class="text-uppercase font-weight-bold my-3 mx-auto py-3 text-white akc-slider-detail d-block text-center position-absolute">Заказать <span></span></a>
+                </div>
+            </div>
+            <div class="akc-wrap">
+                <div class="akc-item text-center position-relative mx-auto d-flex flex-column">
+                    <div class="akc-icon position-absolute d-flex align-items-center justify-content-center">
+                        <img src="img/akcia-1.png" alt="">
+                    </div>
+                    <div class="akc-name text-uppercase font-weight-bold">ПРОМО-МАТЕРИАЛЫ</div>
+                    <span class="akc-ot">от</span>
+                    <div class="akc-price font-weight-bold">45 &#8381;</div>
+                    <div class="akc-name text-uppercase font-weight-bold pb-3">Сумки из спанбонда</div>
+                    <p>НАНЕСЕНИЕ ЛОГОТИПА <br>в 1 цвет с двух сторон <br>(шелкография)</p>
+                    <p class="akc-min-tirazh mt-auto mb-0">Минимальный тираж: 50 шт.</p>
+                    <a href="" class="text-uppercase font-weight-bold my-3 mx-auto py-3 text-white akc-slider-detail d-block text-center position-absolute">Заказать <span></span></a>
+                </div>
+            </div>
+            <div class="akc-wrap">
+                <div class="akc-item text-center position-relative mx-auto d-flex flex-column">
+                    <div class="akc-icon position-absolute d-flex align-items-center justify-content-center">
+                        <img src="img/akcia-2.png" alt="">
+                    </div>
+                    <div class="akc-name text-uppercase font-weight-bold">Бизнес-МАТЕРИАЛЫ</div>
+                    <span class="akc-ot">от</span>
+                    <div class="akc-price font-weight-bold">30 &#8381;</div>
+                    <div class="akc-name text-uppercase font-weight-bold pb-3">Брошюры</div>
+                    <div class="akc-name text-uppercase font-weight-bold pb-3">Листовки</div>
+                    <div class="akc-name text-uppercase font-weight-bold pb-3">Каталоги</div>
+                    <div class="akc-name text-uppercase font-weight-bold pb-3">Открытки</div>
+                    <p class="akc-min-tirazh mt-auto mb-0">Минимальный тираж: 10 шт.</p>
+                    <a href="" class="text-uppercase font-weight-bold my-3 mx-auto py-3 text-white akc-slider-detail d-block text-center position-absolute">Заказать <span></span></a>
+                </div>
+            </div>
+            <div class="akc-wrap">
+                <div class="akc-item text-center position-relative mx-auto d-flex flex-column">
+                    <div class="akc-icon position-absolute d-flex align-items-center justify-content-center">
+                        <img src="img/akcia-3.png" alt="">
+                    </div>
+                    <div class="akc-name text-uppercase font-weight-bold">БАННЕРЫ и ПЛАКАТЫ</div>
+                    <span class="akc-ot">от</span>
+                    <div class="akc-price font-weight-bold">350 <span>м.кв</span> &#8381;</div>
+                    <div class="akc-name text-uppercase font-weight-bold pb-3">Бумажные афиши</div>
+                    <div class="akc-name text-uppercase font-weight-bold pb-3">Самоклейки</div>
+                    <div class="akc-name text-uppercase font-weight-bold pb-3">Баннеры</div>
+                    <div class="akc-name text-uppercase font-weight-bold pb-3">Роллапы</div>
+                    <p class="akc-min-tirazh mt-auto mb-0">Минимальный тираж: от 10 м.кв.</p>
+                    <a href="" class="text-uppercase font-weight-bold my-3 mx-auto py-3 text-white akc-slider-detail d-block text-center position-absolute">Заказать <span></span></a>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section id="news" class="py-5">
         <div class="container-xl">
             <h3 class="text-uppercase text-center"><span class="position-relative">НОВОСТИ И СОБЫТИЯ</span></h3>
@@ -386,8 +487,26 @@
         </div>
     </section>
 
+    <footer class="position-relative">
+        <div class="foot-content position-relative mx-auto py-3">
+            <div class="foot-logo text-center"><img src="img/logo-bottom.jpg" alt=""></div>
+            <div class="foot-contacts py-4 d-flex justify-content-center align-items-center">
+                <a href="" class="text-white mx-3 pb-2"><img src="img/bottom-phone.png" alt=""> 8 (812) 981 77 39</a>
+                <a href="" class="text-white mx-3 pb-2"><img src="img/bottom-mob.png" alt=""> 8 953 177 57 38</a>
+                <a href="" class="text-white mx-3 pb-2"><img src="img/bottom-mail.png" alt=""> info@emelka.ru</a>
+            </div>
+            <div class="foot-soc d-flex justify-content-center">
+                <a href="" class="mx-2"><img src="img/bottom-inst.png" alt=""></a>
+                <a href="" class="mx-2"><img src="img/bottom-vk.png" alt=""></a>
+                <a href="" class="mx-2"><img src="img/bottom-fb.png" alt=""></a>
+            </div>
+        </div>
+        <div class="foot-copy pt-3 pb-4 text-center text-white">&copy; 2021 Компания “Юливем” в Санкт-Петербурге.  Все права защищены.</div>
+    </footer>
+
 	<script src="js/jquery-3.6.0.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+    <script src="js/slick.min.js"></script>
 	<script src="js/scripts.js"></script>
 </body>
 </html>
