--- a/index.html
+++ b/index.html
@@ -501,13 +501,13 @@
                     <div class="col-md-4 py-2">
                         <input type="text" class="form-control" placeholder="Ваше имя:">
                     </div>
-                    <div class="col-md-4  py-2">
+                    <div class="col-md-4 py-2">
                         <input type="tel" class="form-control" placeholder="Телефон:">
                     </div>
-                    <div class="col-md-4  py-2">
+                    <div class="col-md-4 py-2">
                         <input type="email" class="form-control" placeholder="E-mail:">
                     </div>
-                    <div class="col-12  py-2">
+                    <div class="col-12 py-2">
                         <textarea placeholder="Сообщение:"></textarea>
                     </div>
                     <div class="col-12">
@@ -522,9 +522,9 @@
         <div class="foot-content position-relative mx-auto py-3">
             <div class="foot-logo text-center"><img src="img/logo-bottom.jpg" alt="" class="img-fluid"></div>
             <div class="foot-contacts py-4 d-flex flex-wrap justify-content-center align-items-center">
-                <a href="" class="text-white mx-3 pb-3"><img src="img/bottom-phone.png" alt=""> 8 (812) 981 77 39</a>
-                <a href="" class="text-white mx-3 pb-3"><img src="img/bottom-mob.png" alt=""> 8 953 177 57 38</a>
-                <a href="" class="text-white mx-3 pb-3"><img src="img/bottom-mail.png" alt=""> info@emelka.ru</a>
+                <a href="tel:+78129817739" class="text-white mx-3 pb-3"><img src="img/bottom-phone.png" alt=""> 8 (812) 981 77 39</a>
+                <a href="tel:+79531775738" class="text-white mx-3 pb-3"><img src="img/bottom-mob.png" alt=""> 8 953 177 57 38</a>
+                <a href="mailto:info@emelka.ru" class="text-white mx-3 pb-3"><img src="img/bottom-mail.png" alt=""> info@emelka.ru</a>
             </div>
             <div class="foot-soc d-flex justify-content-center">
                 <a href="" class="mx-2"><img src="img/bottom-inst.png" alt=""></a>
